Logger/LogIn-UserPass/register-UserPass

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,8 @@
 
 ## SERVER PROPERTIES
 server.port=8080
+server.servlet.context-path=/api
+
 
 ## SPRING DATA SOURCE
 spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
@@ -17,5 +19,11 @@ spring.datasource.initialization-mode = always
 # JACKSON PROPERTIES
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
 spring.jackson.time-zone= UTC
+
+##JWT PROPERTIES
+
+jwt.jwtSecret= SuperSecretKey#
+jwt.jwtExpiration=60480000
+
 
 
