Request/Respnse payloads -- Repositories

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,7 +10,7 @@ spring.datasource.url = jdbc:mariadb://localhost:3306/polling_tuto
 spring.datasource.username = pollingAdmn
 spring.datasource.password= pollingadmn
 
-## HIBERNATE PROPERTIES Dialects makes HIbernate generate better sql for the choosen database
+## HIBERNATE PROPERTIES Dialects makes Hibernate generate better sql for the choosen database
 spring.jpa.hibernate.ddl-auto = update
 
 #INITIALIZE THE DATASOURCE WITH AVAILABLE DDL AND DML SCRIPTS
@@ -25,5 +25,9 @@ spring.jackson.time-zone= UTC
 jwt.jwtSecret= SuperSecretKey#
 jwt.jwtExpiration=60480000
 
+#App Constants
+app.constant.page-number=0
+app.constant.page-size=30
+app.constant.max-page.size=50
 
 
