--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 log4j.rootCategory=OFF
 
 #Seting the loggers at main package API's package
-log4j.logger.com.example.myFirstSpringApp=WARN, console
+log4j.logger.com.example.myFirstSpringApp=INFO, console
 
 # Redirect log messages at the console.
 log4j.appender.console=org.apache.log4j.ConsoleAppender
